@@ -1,3 +1,8 @@
+2002-07-22  Bob Woodside  <dumbledore@woodsway.com>
+
+	* fvwm/placement.c (PlaceWindow):
+	Fixed interaction between CascadePlacement and StartsOnPage
+
 2002-07-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/move_resize.c (move_window_doit):
